--- a/hie.yaml
+++ b/hie.yaml
@@ -6,7 +6,7 @@ cradle:
       component: "punt-engine:doctests"
     - path: "./tests"
       component: "punt-engine:test-library"
-    - path: "./bin/Clashi.hs"
+    - path: "./exe/Clashi.hs"
       component: "punt-engine:exe:clashi"
-    - path: "./bin/Clash.hs"
+    - path: "./exe/Clash.hs"
       component: "punt-engine:exe:clash"
