--- a/punt-engine.cabal
+++ b/punt-engine.cabal
@@ -86,6 +86,7 @@ library
   hs-source-dirs: src
   exposed-modules:
     Example.Project
+    FixParser.Project
   default-language: Haskell2010
 
 -- Builds the executable 'clash', with punt-engine project in scope
