--- a/fix-parser/fix-parser.cabal
+++ b/fix-parser/fix-parser.cabal
@@ -1,9 +1,9 @@
 cabal-version:       2.4
-name:                simple
+name:                fix-parser
 version:             0.1
-license:             BSD-2-Clause
-author:              John Smith <john@example.com>
-maintainer:          John Smith <john@example.com>
+license:             MIT
+author:              Race Williams <race@raquent.in>
+maintainer:          Race Williams <race@raquent.in>
 
 common common-options
   default-extensions:
@@ -85,14 +85,14 @@ library
   import: common-options
   hs-source-dirs: src
   exposed-modules:
-    Example.Project
+    FixParser
   default-language: Haskell2010
 
 -- Builds the executable 'clash', with simple project in scope
 executable clash
   main-is: bin/Clash.hs
   default-language: Haskell2010
-  Build-Depends: base, clash-ghc, simple
+  Build-Depends: base, clash-ghc, fix-parser
   if !os(Windows)
     ghc-options: -dynamic
 
@@ -102,7 +102,7 @@ executable clashi
   default-language: Haskell2010
   if !os(Windows)
     ghc-options: -dynamic
-  build-depends: base, clash-ghc, simple
+  build-depends: base, clash-ghc, fix-parser
 
 test-suite doctests
   type:             exitcode-stdio-1.0
@@ -123,7 +123,7 @@ test-suite test-library
   ghc-options: -threaded
   main-is: unittests.hs
   other-modules:
-    Tests.Example.Project
+    Tests.FixParser
   build-depends:
     simple,
     QuickCheck,
